@@ -14,14 +14,14 @@ Build-Depends:
  x11proto-gl-dev (>= 1.4.14),
  libxxf86vm-dev,
  libexpat1-dev,
- libgcrypt20-dev [amd64 i386 arm64 armhf ppc64el x32],
+ libgcrypt20-dev [amd64 i386 x32],
  libsensors4-dev [!hurd-any],
  libxfixes-dev,
  libxdamage-dev,
  libxext-dev,
  libva-dev (>= 1.6.0) [linux-any kfreebsd-any],
  libvdpau-dev (>= 1.1.1) [linux-any kfreebsd-any],
- libvulkan-dev [amd64 i386 arm64 armhf ppc64el x32],
+ libvulkan-dev [amd64 i386 x32],
  autoconf,
  automake,
  libtool,
@@ -463,7 +463,7 @@ Description: Mesa VDPAU video acceleration drivers
 
 Package: mesa-vulkan-drivers
 Section: libs
-Architecture: amd64 i386 arm64 armhf ppc64el x32
+Architecture: amd64 i386 x32
 Pre-Depends: ${misc:Pre-Depends}
 Depends:
  libvulkan1,
