@@ -1,3 +1,2 @@
-package-name-doesnt-match-sonames libvulkan-intel libvulkan-radeon
+package-name-doesnt-match-sonames libvulkan-intel
 shlib-without-versioned-soname usr/lib/*/libvulkan_intel.so libvulkan_intel.so
-shlib-without-versioned-soname usr/lib/*/libvulkan_radeon.so libvulkan_radeon.so
